feat: add profile and token

--- a/client/src/routes/Home/components/index.less
+++ b/client/src/routes/Home/components/index.less
@@ -1,5 +1,5 @@
-@import('@assets/css/styles.less');
-
+// @import('@assets/css/styles.less');
+;
 @BG: #2a2a2a;
 .home-header {
   position: fixed;
@@ -38,7 +38,7 @@
       font-size: 30px;
       border-top: 1px solid lighten(@BG, 20%);
       &.active {
-        color: @theme-color;
+        color: #f9b;
       }
     }
   }
