fix: fix profile props.valiate not a function

--- a/client/src/components/NavHeader/index.less
+++ b/client/src/components/NavHeader/index.less
@@ -9,9 +9,13 @@
     text-align: center;
     line-height: 100px;
     background-color: #2a2a2a;
-    i {
+    color: #fff;
+    svg {
         position: absolute;
         left: 20px;
         line-height: 100px;
+        width: 40px;
+        height: 40px;
+        top: 30px;
     }
 }
