--- a/client/src/assets/css/common.less
+++ b/client/src/assets/css/common.less
@@ -17,7 +17,6 @@ a {
     flex-direction: column;
 }
 .main-container {
-    padding: 100px 0;
-    background: #f9b;
+    background: #f8f8f8;
     flex: 1 0 90%;
 }
