--- a/client/src/components/Tabs/index.less
+++ b/client/src/components/Tabs/index.less
@@ -9,6 +9,7 @@ footer {
     justify-content: space-around;
     align-items: center;
     flex: 1 0 10%;
+    border-top: 1px solid #f8f8f8;
     a {
         display: flex;
         flex-direction: column;
