feat: optimize theme

--- a/client/src/components/NavHeader/index.less
+++ b/client/src/components/NavHeader/index.less
@@ -1,3 +1,5 @@
+@import '@/assets/css/styles.less';
+
 .nav-header {
     position: sticky;
     left: 0;
@@ -8,7 +10,7 @@
     box-sizing: border-box;
     text-align: center;
     line-height: 100px;
-    background-color: #2a2a2a;
+    background-color: @theme-color;
     color: #fff;
     svg {
         position: absolute;
