--- a/client/src/routes/Cart/index.less
+++ b/client/src/routes/Cart/index.less
@@ -1,4 +1,5 @@
 .cart-list {
-    height: calc(100vh - 320px);
+    height: calc(100vh - 360px);
     overflow-y: scroll;
+    box-sizing: border-box;
 }
