--- a/client/src/routes/Detail/index.less
+++ b/client/src/routes/Detail/index.less
@@ -1,6 +1,10 @@
 button.add-cart {
     &:hover {
-        background: #f71f40;
+        background: #f9a;
         color: #fff;
+        border: none;
+        outline: none;
+        border-radius: 30px;
+        box-lines: 0 0 20px 0 rgba(0,0,0,.1);
     }
 }
