--- a/client/src/routes/Register/index.less
+++ b/client/src/routes/Register/index.less
@@ -1,3 +1,15 @@
+@import '@/assets/css/styles.less';
+
 .login-form {
   padding: 20px;
+  .login-form-button {
+    width: 60%;
+    border-radius: 50px;
+    margin: 0 auto;
+    display: block;
+    background: @theme-color;
+    border: none;
+    outline: none;
+    box-shadow: 0 0 10px 0 rgba(0,0,0,.1);
+  }
 }
