feat: optimize UI

--- a/client/src/routes/Home/components/lessonList/index.less
+++ b/client/src/routes/Home/components/lessonList/index.less
@@ -1,6 +1,11 @@
 .lesson-list {
     h2 {
       line-height: 100px;
+      position: sticky;
+      top: 0;
+      width: 100%;
+      z-index: 1000;
+      background: #fff;
       i {
         margin: 0 10px;
       }
