--- a/client/src/routes/Home/components/homeHeader/index.less
+++ b/client/src/routes/Home/components/homeHeader/index.less
@@ -1,6 +1,5 @@
 @import '@/assets/css/styles.less';
 
-@BG: #f9a;
 .home-header {
   position: fixed;
   top: 0;
@@ -9,7 +8,7 @@
   z-index: 999;
   .logo-header {
     height: 100px;
-    background: @BG;
+    background: @theme-color;
     color: #fff;
     display: flex;
     justify-content: space-between;
@@ -30,13 +29,13 @@
     top: 100px;
     left: 0;
     padding: 10px 50px;
-    background: @BG;
+    background: @theme-color;
     li {
       line-height: 60px;
       text-align: center;
       color: #fff;
       font-size: 30px;
-      border-top: 1px solid lighten(@BG, 20%);
+      border-top: 1px solid lighten(@theme-color, 20%);
       opacity: .6;
       &.active, &:hover {
         opacity: 1;
